--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/iot_device_management?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=cyy021027
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.type-aliases-package=com.example.iotdevicemanagementbackend.pojo
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
+jasypt.encryptor.password=123456
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.property.prefix=ENC(
+jasypt.encryptor.property.suffix=)
